# denkovi_relayboard

./: .flake8  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
examples/: basic_control.py  scan_devices.py
src/denkovi_relayboard/: __init__.py  factory.py
src/denkovi_relayboard/backends/: __init__.py  _dummy.py  ftd2xx_backend.py  mcp2200_backend.py  pyftdi_backend.py  vcp_backend.py
src/denkovi_relayboard/cli/: control.py  list_devices.py
src/denkovi_relayboard/definitions/: constants.py  exceptions.py  interfaces.py  structures.py
src/denkovi_relayboard/ftd2xx_python/: __init__.py  core.py
src/denkovi_relayboard/ftd2xx_python/definitions/: c_structures.py  exceptions.py  namespace.py  structures.py
src/denkovi_relayboard/hid/: __init__.py
src/denkovi_relayboard/implements/: __init__.py  denkovi_16ch.py  denkovi_4ch.py  denkovi_8ch.py
